<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.monil20.resolve.login.SignUpFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="92dp">

            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/bubble"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/fname"
                android:inputType="text"
                android:paddingEnd="26dp"
                android:paddingStart="26dp"
                android:textColor="#ffffff"
                android:textColorHint="#8effffff"
                android:nextFocusDown="@id/lname"/>

            <EditText
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/bubble"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/lname"
                android:inputType="text"
                android:paddingEnd="26dp"
                android:paddingStart="26dp"
                android:textColor="#ffffff"
                android:textColorHint="#8effffff"/>

        </LinearLayout>

        <EditText
            android:id="@+id/uname"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/bubble"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingEnd="26dp"
            android:paddingStart="26dp"
            android:textColor="#ffffff"
            android:textColorHint="#8effffff" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/bubble"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingEnd="26dp"
            android:paddingStart="26dp"
            android:textColor="#ffffff"
            android:textColorHint="#8effffff" />

        <EditText
            android:id="@+id/mob"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/bubble"
            android:gravity="center_vertical"
            android:hint="@string/mob"
            android:inputType="phone"
            android:paddingEnd="26dp"
            android:paddingStart="26dp"
            android:textColor="#ffffff"
            android:textColorHint="#8effffff" />

    </LinearLayout>
</FrameLayout>